--- a/colplus-admin/src/main/resources/index.html
+++ b/colplus-admin/src/main/resources/index.html
@@ -9,7 +9,7 @@
 <ul>
     <li><a href="/importer?state=">Imports</a></li>
     <li><a href="/importer/queue">Import Queue</a></li>
-    <li><a href="/{0}/dashboard/">Monitor Dashboard</a></li>
+    <li><a href="{0}/dashboard/">Monitor Dashboard</a></li>
     <li><a href="{0}/metrics?pretty=true">Metrics</a></li>
     <li><a href="{0}/threads">Threads</a></li>
     <li><a href="{0}/healthcheck?pretty=true">Healthcheck</a></li>
