Always use local openAPI configs

--- a/webservice/src/main/resources/swagger.html
+++ b/webservice/src/main/resources/swagger.html
@@ -17,7 +17,7 @@
     window.onload = function() {
         // Build a system
         const ui = SwaggerUIBundle({
-            url: "OPENAPI_URL",
+            url: "/openapi.json",
             dom_id: '#swagger-ui',
             deepLinking: true,
             presets: [
